# hass-zeus

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  flake.nix  hacs.json  pyproject.toml  release-please-config.json  requirements_dev.txt
.github/workflows/: release.yml
custom_components/zeus/: __init__.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  forecast_solar_api.py  manifest.json  number.py  scheduler.py  sensor.py  services.yaml  strings.json  switch.py  thermal_model.py  tibber_api.py
custom_components/zeus/translations/: en.json
custom_components/zeus/www/: zeus-scheduler-card.js
docs/: entities.md  how-it-works.md  implementation-progress.md  setup.md  user-guide.md
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_forecast_solar_api.py  test_manual_device.py  test_scheduler.py  test_sensor.py  test_thermal_model.py  test_thermostat.py
