[project]
name = "zeus"
version = "0.1.0"
description = "Zeus - Home Assistant custom integration"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
local_partial_types = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unreachable = true

[tool.coverage.run]
source = ["custom_components/zeus"]
